# SPAI

./: .env.example  .gitignore  Cargo.toml  README.md  Solid_Pod_Data_Sovereignty_Analysis.md  agent_instantiation_spec.md  data_container_framework.md  local_serve.sh  requirements.txt  run_local_security_scan.sh  solidpods_agent_interface_spec.md  spvault.md
checkpoints/: cmdr._alex_rodriguez_(aerospace_engineer)_20251213_004823.af  cmdr._alex_rodriguez_(aerospace_engineer)_20251213_013846.af  dr._kenji_tanaka_(policy_analyst)_20251213_004823.af  dr._kenji_tanaka_(policy_analyst)_20251213_013846.af  dr._sarah_chen_(game_theorist)_20251213_004823.af  dr._sarah_chen_(game_theorist)_20251213_013846.af
data/mathoverflow/questions/: q_108267.json  q_119607.json  q_125260.json  q_125374.json  q_126852.json  q_130104.json  q_134580.json  q_151847.json  q_154892.json  q_159371.json  q_160949.json  q_163106.json  q_165867.json  q_173036.json  q_173112.json  q_173146.json  q_177630.json  q_180097.json  q_181861.json  q_182703.json  q_185735.json  q_186869.json  q_187377.json  q_188323.json  q_188722.json  q_193574.json  q_194767.json  q_195255.json  q_195414.json  q_196083.json  q_199049.json  q_201302.json  q_202819.json  q_204471.json  q_207868.json  q_209555.json  q_209932.json  q_211472.json  q_214503.json  q_217486.json  (+460 more)
data/mathoverflow/solved/: q_108267.lean  q_108267_solved.json
examples/: basic_agent.rs  basic_agent_chkrootkit copy.rs  basic_agent_local.rs  guardrails_demo.rs  leo_cooperation_theory.rs  local_agent_chkrootkit.rs  math_agg.rs  monetary_policy.rs  multi_agent_handoff.rs  solid_agent.rs  stateful_agent.rs  swarm_security_agent.rs  test_patterns.rs
security_swarm_20251230_173356/: 01_network_raw.txt  02_process_raw.txt  03_rootkit_raw.txt  04_lynis_raw.txt  summary.txt
spai/: Cargo.toml
spai/src/: lib.rs
src/: agent.rs  agent_file.rs  background.rs  config.rs  error.rs  filesystem.rs  guardrails.rs  handoffs.rs  hitl.rs  lib.rs  llm_client.rs  memory.rs  memory_tools.rs  openrouter.rs  patterns.rs  react.rs  sleeptime.rs  storage.rs  tools.rs  tracing_ext.rs  turns.rs  types.rs  vllm.rs
src/orchestrator/: concurrent.rs  config.rs  consensus.rs  debate.rs  hierarchical.rs  mod.rs  pattern.rs  router.rs  sequential.rs
src/orchestrator/templates/: concurrent.yaml  consensus.yaml  debate.yaml  hierarchical.yaml  router.yaml  sequential.yaml
src/solid/: auth.rs  consent.rs  dpop.rs  guardrails.rs  identity.rs  ipc.rs  mod.rs  tools.rs
tools/: NEW_SECURITY_TOOLS.md  awk_tool  awk_tool.json  build_all_mcp.sh  cut_tool  cut_tool.json  find_tool  find_tool.json  grep_tool  grep_tool.json  head_tail  head_tail.json  mathoverflow_scraper  mathoverflow_scraper.json  portlist  run_security_assessment.sh  security_audit_verify.sh  sed_tool  sed_tool.json  setup_all_security_tools.sh  setup_postgres_docker.sh  sort_uniq  sort_uniq.json  tags.json  tr_tool  tr_tool.json  wc_tool  wc_tool.json  xargs_tool  xargs_tool.json
tools/chkrootkit-mcp/: Cargo.toml  README.md
tools/chkrootkit-mcp/src/: main.rs
tools/htop-mcp/: Cargo.toml  README.md
tools/htop-mcp/src/: main.rs
tools/lynis-mcp/: Cargo.toml
tools/lynis-mcp/src/: main.rs
tools/procinfo-mcp/: Cargo.toml
tools/procinfo-mcp/src/: main.rs
tools/rkhunter-mcp/: Cargo.toml
tools/rkhunter-mcp/src/: main.rs
tools/solid-identity-bridge/: package-lock.json  package.json
tools/solid-identity-bridge/src/: handlers.ts  index.ts
tools/tshark-mcp/: Cargo.toml
tools/tshark-mcp/src/: main.rs
