[package]
name = "spai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ATHPTTGH Agent Harness - Production-grade multi-agent orchestration framework"
keywords = ["ai", "agents", "llm", "multi-agent", "openrouter"]
categories = ["asynchronous", "web-programming"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
swarms-rs = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
secrecy = { workspace = true }
jsonschema = { workspace = true }
schemars = { workspace = true }
futures = { workspace = true }
config = { workspace = true }
sled = { workspace = true }
governor = { workspace = true }
async-stream = { workspace = true }
eventsourcing = { workspace = true }

# Additional dependencies
parking_lot = "0.12"
dashmap = "6.1"
url = "2.5"
bytes = "1.9"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.6"
tempfile = "3.14"

[features]
default = ["full"]
full = ["mcp-tools", "telemetry", "storage"]
mcp-tools = []
telemetry = []
storage = []
