[package]
name = "htop-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "htop-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.11.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sysinfo = "0.32"
tracing = "0.1"
tracing-subscriber = "0.3"
