[package]
name = "procinfo-mcp"
version = "0.1.0"
edition = "2021"
authors = ["SPAI Contributors"]
license = "MIT OR Apache-2.0"
description = "MCP server for process profiling using ps, pstree, lsof and other Linux utilities"

[dependencies]
rmcp = { version = "0.11.0", features = ["server", "macros", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"

[[bin]]
name = "procinfo-mcp"
path = "src/main.rs"
